# RAJAProxies

./: CMakeLists.txt  go.hard  run.ranges
apollo-lulesh/: CMakeLists.txt
apollo-lulesh/RAJA/: CMakeLists.txt
apollo-lulesh/baseline/: CMakeLists.txt
lulesh-apollo/: CMakeLists.txt
lulesh-apollo/RAJA/: CMakeLists.txt  lulesh.cpp
lulesh-v2.0/RAJA/: lulesh-init.cpp
